@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: coremodel.h,v 1.4 2003/08/27 17:50:40 vanto Exp $
+ * $Id: coremodel.h,v 1.5 2003/08/29 14:34:41 vanto Exp $
  *
  *****************************************************************************/
 
@@ -37,10 +37,25 @@ class CoreModel: public BlockModel
 {
 
  public:
-    CoreModel(QString name, QString description);
+    /*
+     * Creates a CoreModel instance for the library
+     */
+    CoreModel(QString type, QString description);
+
+    /*
+     * Creates a CoreModel instance for the project out of an xml subtree
+     */
     CoreModel(QDomElement coreElement);
 
+    /*
+     * Serializes this instance to a xml subtree
+     * @param document the main QDomDocument instance. Needed to create elements
+     */
     QDomElement serialize(QDomDocument *document);
+
+    /*
+     * Deserializes an xml subtree and sets this' properties
+     */
     //void deserialize(QDomElement element);
 };
 
