@@ -1,3 +1,10 @@
+2003-08-29  Tammo van Lessen  <vanto@users.sourceforge.net>
+
+	* abstractmodel.cpp: model type added
+
+	* project.cpp (Project): project-wide ids implemented,	
+		serialize/deserialize improved
+
 2003-08-21  Steffen Pingel  <squig@users.sourceforge.net>
 
 	* mdiwindow.cpp: Added zoom slots.
